# Generative-AI

LANGCHAIN/: .env  note.md  pyproject.toml
LANGCHAIN/src/Models/: app.py  chatbot.py  chatbot_mongo.py  ui_chatbot.py
User-Perspective/Langchain/: note.py  note.tldr  note__.md
User-Perspective/Langchain/Models/: app.py  note.md
User-Perspective/Langchain/Models/1_LLMs/: llm_model.py
User-Perspective/Langchain/Models/2_Chatbot/: chat_model.py  gemini.py  huggingface_api.py  huggingface_local.py
User-Perspective/Langchain/Models/3_EmbeddingModels/: 1_openai.py  2_huggingface.py  3_document_proj.py
User-Perspective/Langchain/Models/LLMs/: llm_demo.py
User-Perspective/Langchain/Prompts/: note.md
User-Perspective/Langchain/Prompts/prompts/: main.py  pyproject.toml
User-Perspective/Langchain/Prompts/prompts/src/: app.py  chat_prompt.py  chatbot.py  message_placeholder.py  messages.py  note.md  prompt_generator.py  prompt_ui_v1.py  prompt_ui_v2.py  template.json
User-Perspective/Langchain/Reloaded/: .env  main.py  pyproject.toml
User-Perspective/Langchain/Reloaded/2_Langchain_Components/: note.md
User-Perspective/Langchain/Reloaded/3_Langchain_Models/CHATBOT_MODELS/: chaat_model.py
User-Perspective/Langchain/Reloaded/3_Langchain_Models/LLM/: llm.py
User-Perspective/Langchain/Structured_OP/sop/: .env  main.py  pyproject.toml
User-Perspective/Langchain/Structured_OP/sop/src/: typed_dict.py  with_struc_op_typed,py
